Compiler/src/main/java/SyntacticAnalyzer/SyntacticAnalyzer.java
package SyntacticAnalyzer;

import Exceptions.SyntacticExceptions.SyntacticException;
import LexicalAnalyzer.LexicalAnalyzer;
import LexicalAnalyzer.Token;
import SemanticAnalyzer.SymbolTable;

import java.util.List;
import java.util.Objects;

/**
 * Clase que será la encargada de ejecutar nuestro análisis sintáctico
 * @author Yeumen Silva
 */

public class    SyntacticAnalyzer {

    private Token actualToken;

    private LexicalAnalyzer lexicalAnalyzer;

    private SymbolTable symbolTable = new SymbolTable();


    /**
     * Constructor del Analizador Sintáctico que inicializa el Executor
     * el cual es el encargado de pasar los tokens y evaluar los errores
     * Léxicos y a su vez se encarga de llamar a la primera regla
     * de nuestra gramática
     * @author Yeumen Silva
     * */

    public SymbolTable startSyntactic(LexicalAnalyzer lexicalAnalyzer){
        this.lexicalAnalyzer = lexicalAnalyzer;
        this.actualToken = lexicalAnalyzer.getNextToken();
        program();
        return this.symbolTable;

    }
    
    /**
     * Método el cual trata de hacer match y actualizar el token actual
     * y el siguiente
     * @param actualname Nombre del lexema actual
     * @author Yeumen Silva
     * */

    private boolean match(String actualname){

        //Verifico si matchea el Token actual con token esperado
        if(Objects.equals(this.actualToken.getToken(),"StructID") ||
                Objects.equals(this.actualToken.getToken(),"ObjID") ||
                Objects.equals(this.actualToken.getToken(),"IntLiteral") ||
                Objects.equals(this.actualToken.getToken(),"StrLiteral") ||
                Objects.equals(this.actualToken.getToken(),"CharLiteral")){
            if(Objects.equals(this.actualToken.getToken(), actualname)){

                this.actualToken = lexicalAnalyzer.getNextToken();
                return true;

            }
            else {
                throw createException(this.actualToken, List.of(actualname), this.actualToken.getToken());
            }
        }

        //Verifico si matchea el lexema del token actual con el lexema esperado
        if(Objects.equals(this.actualToken.getLexeme(), actualname)){

            this.actualToken = lexicalAnalyzer.getNextToken();
            return true;

        }
        else {
            throw createException(this.actualToken, List.of(actualname),this.actualToken.getLexeme());
        }

    }

    /**
     * Método el cual trata de hacer match cuando tenemos
     * más de un match posible
     * @param actualname Nombre del lexema actual
     * @author Yeumen Silva
     * */

    private boolean moreOneMatch(String actualname){
        return Objects.equals(this.actualToken.getLexeme(),actualname);
    }

    private SyntacticException createException(Token token, List<String> waiting, String actual){

        return new SyntacticException(token,waiting,actual);
    }

    /**
     * Método que dado un varargs de Strings que contiene los primeros
     * o los siguientes de alguna regla, vérifica que el léxema de
     * el token actual matche con alguno de los primeros o siguientes
     * @param name varargs con los primeros o siguientes de alguna regla
     * @return booleano representando si pertenece o no
     * a los primeros o siguientes
     * @author Yeumen Silva
     * */

    private boolean verifyEquals(String... name){
        String actualLexeme = this.actualToken.getLexeme();
        String actualToken = this.actualToken.getToken();

        for (String lexeme : name){

            if(Objects.equals(actualLexeme,lexeme) || Objects.equals(actualToken,lexeme)){
                return true;
            }
        }
        return false;
    }

    /**
     * Regla inicial de nuestra gramática
     * @author Yeumen Silva
     * */

    private void program() {

        boolean isFInal = true;
        //Primeros Start
        if (verifyEquals("start")) {
            start();
            if(!Objects.equals(this.actualToken.getLexeme(), "$EOF$")){
                isFInal = false;
            }
        } else {
            //Primeros Lista-Definiciones
            if (verifyEquals("impl","struct")) {
                listaDefiniciones();
                start();
                if(!Objects.equals(this.actualToken.getLexeme(), "$EOF$")){
                    isFInal = false;
                }
            }
            else {
                throw createException(this.actualToken, List.of("start","impl","struct"),this.actualToken.getLexeme());
            }
        }

        if(!isFInal){
            throw createException(this.actualToken,List.of("$EOF$"),this.actualToken.getLexeme());
        }

    }

    /**
     * Regla Start
     * @author Yeumen Silva
     * */

    private void start(){

        //Tabla Simbolos-------------------------------------
        symbolTable.addStart(this.actualToken);
        //-----------------------------------------------------

        //Sintáctico
        match("start");
        bloqueMetodo();
    }

    /**
     * Regla Lista-Definiciones
     * @author Yeumen Silva
     * */

    private void listaDefiniciones(){
        //Primeros Struct
        if(verifyEquals("struct")){
            struct();
            listaDefinicionesF();

        }else {
            //Primeros Impl
            if(verifyEquals("impl")){
                impl();
                listaDefinicionesF();
            }
            else {
                throw createException(this.actualToken, List.of("impl","struct"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Lista-Definiciones-F
     * @author Yeumen Silva
     * */

    private void listaDefinicionesF(){

        //Primeros Lista-Definiciones
        if(verifyEquals("impl","struct")){
            listaDefiniciones();
        }
        else {
            //Siguientes Lista-Definiciones-F
            if(verifyEquals("start","$EOF$")){
                // Lambda
            }
            else {
                throw createException(this.actualToken, List.of("start","impl","struct"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Struct
     * @author Yeumen Silva
     * */

    private void struct(){
        match("struct");

        //Semántico--------------------------------------------
        this.symbolTable.addStructByStruct(this.actualToken);
        //-----------------------------------------------------

        match("StructID");
        structF();
    }

    /**
     * Regla Struct-F
     * @author Yeumen Silva
     * */

    private void structF(){

        //Primeros de :
        if(verifyEquals(":")){
            herencia();
            match("{");
            structF1();

        }
        else {
            match("{");
            structF1();
        }
    }

    /**
     * Regla Struct-F1
     * @author Yeumen Silva
     * */

    private void structF1(){
        //Primeros Atributo-Estrella
        if(verifyEquals("Array", "Bool", "Char","Int","Str","StructID"
                ,"pri")){
            atributoEstrella();
            match("}");

        }
        else {
            match("}");
        }
    }

    /**
     * Regla Atributo-Estrella
     * @author Yeumen Silva
     * */

    private void atributoEstrella(){
        atributo();
        atributoEstrellaF();
    }

    /**
     * Regla Atributo-Estrella-F
     * @author Yeumen Silva
     * */

    private void atributoEstrellaF(){

        //Primeros de Atributo-Estrella
        if(verifyEquals("Array" , "Bool" , "Char" , "Int" , "Str" , "StructID"
                , "pri")){
            atributoEstrella();
        }
        else {
            //Siguientes de Atributo-Estrella-F
            if(verifyEquals("}","$EOF$")){
                //lambda
            }
            else {
                throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str" , "StructID"
                        , "pri","}"),this.actualToken.getLexeme());
            }
        }

    }

    /**
     * Regla Impl
     * @author Yeumen Silva
     * */

    private void impl(){
        match("impl");

        //Semántico----------------------------------------
        this.symbolTable.addStructByImpl(this.actualToken);
        //-------------------------------------------------

        match("StructID");
        match("{");
        miembroMas();
        match("}");
    }

    /**
     * Regla Miembro-Mas
     * @author Yeumen Silva
     * */

    private void miembroMas(){
        miembro();
        miembroMasF();
    }

    /**
     * Regla Miembro-Mas-F
     * @author Yeumen Silva
     * */

    private void miembroMasF(){

        //Primeros Miembro-Mas
        if(verifyEquals(".","fn","st")){
            miembroMas();
        }
        else {
            //Siguientes Miembro-Mas-F
            if (verifyEquals("}","$EOF$")){
                //Lambda
            }
            else {
                throw createException(this.actualToken, List.of("." , "fn" , "st" , "}"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Herencia
     * @author Yeumen Silva
     * */

    private void herencia(){
        match(":");

        //Análisis Semantico-------------------------------
        this.symbolTable.addHeritance(this.actualToken);
        //--------------------------------------------------

        tipo();
    }

    /**
     * Regla Miembro
     * @author Yeumen Silva
     * */

    private void miembro(){

        //Primeros Método
        if(verifyEquals("fn","st")){
            metodo();
        }
        //Primeros Constructor
        else {
            if(verifyEquals(".")){
                constructor();
            }
            else {
                throw createException(this.actualToken, List.of("fn" , "st" , "." ),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Constructor
     * @author Yeumen Silva
     * */

    private void constructor(){
        match(".");
        argumentosFormales();
        bloqueMetodo();
    }

    /**
     * Regla atributo
     * @author Yeumen Silva
     * */

    private void atributo(){

        //Primeros visibilidad
        if(verifyEquals("pri")){
            visibilidad();
            // Analisis semantico ----------------------------------
            String attrType = this.actualToken.getLexeme();
            // -----------------------------------------------------
            tipo();
            // Analisis semantico ----------------------------------
            this.symbolTable.addAttrToStruct(this.actualToken, attrType);
            // -----------------------------------------------------
            listaDeclaracionVariables(attrType, true);
            match(";");
        }
        else {
            //Primeros Tipo
            if(verifyEquals("Array" , "Bool" , "Char" , "Int" , "Str"
            , "StructID")){
                // Analisis semantico ----------------------------------
                String attrType = this.actualToken.getLexeme();
                // -----------------------------------------------------
                tipo();
                // Analisis semantico ----------------------------------
                this.symbolTable.addAttrToStruct(this.actualToken, attrType);
                // -----------------------------------------------------
                listaDeclaracionVariables(attrType, true);
                match(";");
            }
            else {
                throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str" , "StructID"
                        , "pri"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla método
     * @author Yeumen Silva
     * */

    private void metodo(){
        //Primeros Forma-Método
        if(verifyEquals("st")){
            formaMetodo();
            match("fn");

            // Analisis semantico ----------------------------------------
            boolean isStatic = true;
            this.symbolTable.addMethodToStruct(this.actualToken,isStatic);
            // -----------------------------------------------------------

            match("ObjID");
            argumentosFormales();
            match("->");
            //Análisis semántico-----------------------------------------
            this.symbolTable.addReturnToMethod(this.actualToken);
            //------------------------------------------------------------
            tipoMetodo();
            bloqueMetodo();
        }
        else {
            //Primeros de fn
            if(verifyEquals("fn")){
                match("fn");

                // Analisis semantico ----------------------------------
                boolean isEstatic = false;
                this.symbolTable.addMethodToStruct(this.actualToken,isEstatic);
                // -----------------------------------------------------

                match("ObjID");
                argumentosFormales();
                match("->");

                //Análisis semántico-----------------------------------------
                this.symbolTable.addReturnToMethod(this.actualToken);
                //------------------------------------------------------------

                tipoMetodo();
                bloqueMetodo();

            }
            else {
                throw createException(this.actualToken, List.of("st" , "fn" ),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla visibilidad
     * @author Yeumen Silva
     * */

    private void visibilidad(){
        // Analisis semantico ----------------------------------
        //this.symbolTable.setVisibility(this.actualToken);
        // -----------------------------------------------------
        match("pri");
    }

    /**
     * Regla Forma-Metodo
     * @author Yeumen Silva
     * */

    private void formaMetodo(){
        match("st");
    }

    /**
     * Regla Bloque-Metodo
     * @author Yeumen Silva
     * */

    private void bloqueMetodo(){
        match("{");
        bloqueMetodoF();

    }

    /**
     * Regla Bloque-Metodo-F
     * @author Yeumen Silva
     * */

    private void bloqueMetodoF(){

        //Primeros Decl-Var-Locales-Estrella
        if(verifyEquals("Array" , "Bool" , "Char" , "Int" , "Str"
                , "StructID")){
            declVarLocalesEstrella();
            bloqueMetodoF1();
        }else {
            //Primeros Sentencia-Estrella
            if (verifyEquals("(" , ";" , "ObjID" , "if"
                    , "ret" , "self" , "while", "{")){
                sentenciaEstrella();
                match("}");
            }else {
                if(verifyEquals("}")) {
                    match("}");
                }
                else {
                    throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str" , "StructID"
                            , "(" , ";" , "ObjID" , "if", "ret"
                            , "self" , "while", "{","}"),this.actualToken.getLexeme());
                }
            }
        }
    }

    /**
     * Regla Bloque-Metodo-F1
     * @author Yeumen Silva
     * */

    private void bloqueMetodoF1(){
        //Primeros }
        if(verifyEquals("}")){
            match("}");
        }
        else {
            //Primeros Sentencia-Estrella
            if(verifyEquals("(" , ";" , "ObjID" , "if"
                    , "ret" , "self" , "while", "{")){
                sentenciaEstrella();
                match("}");
            }
            else {
                throw createException(this.actualToken, List.of("}" , "(" , ";" , "ObjID" , "if"
                        , "ret" , "self" , "while", "{"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla DeclVar-Locales-Estrella
     * @author Yeumen Silva
     * */

    private void declVarLocalesEstrella(){
        declVarLocales();
        declVarLocalesEstrellaF();
    }

    /**
     * Regla DeclVar-Locales-Estrella-F
     * @author Yeumen Silva
     * */

    private void declVarLocalesEstrellaF(){

        //Primeros Decl-Var-Locales-Estrella
        if(verifyEquals("Array" , "Bool" , "Char" , "Int" , "Str"
                , "StructID")){
            declVarLocalesEstrella();
        }
        else {
            //Siguientes de Decl-Var-Locales-Estrella-F
            if(verifyEquals("(" , ";" , "ObjID" , "if" ,
                    "ret" , "self" , "while" , "{" , "}" , "$EOF$")){
                //Lambda
            }
            else {
                throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str"
                        , "StructID","(" , ";" , "ObjID" , "if" ,
                        "ret" , "self" , "while" , "{" , "}" ),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Sentencia-Estrella
     * @author Yeumen Silva
     * */

    private void sentenciaEstrella(){
        sentencia();
        sentenciaEstrellaF();
    }

    /**
     * Regla Sentencia-Estrella-F
     * @author Yeumen Silva
     * */

    private void sentenciaEstrellaF(){
        //Primeros Sentencia-Estrella
        if(verifyEquals("(" , ";" , "ObjID" , "if"
                , "ret" , "self" , "while", "{")){
            sentenciaEstrella();
        }
        else {
            //Siguientes Sentencia-Estrella-F
            if (verifyEquals("}","$EOF$")){
                //Lambda
            }
            else {
                throw createException(this.actualToken, List.of("(" , ";" , "ObjID" , "if"
                        , "ret" , "self" , "while", "{","}"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla DeclVar-Locales
     * @author Yeumen Silva
     * */

    private void declVarLocales(){
        // Analisis semantico ----------------------------------
        //this.symbolTable.setVarType(this.actualToken);
        // -----------------------------------------------------
        tipo();
        // Analisis semantico ----------------------------------
        //this.symbolTable.addVarToMethod(this.actualToken);
        // -----------------------------------------------------
        listaDeclaracionVariables();
        match(";");
    }

    /**
     * Regla Lista-Declaracion-Variables
     * @param type este es el tipo de variable/atributo
     * @param isAttribute indica si es un atributo, en caso contrario se asume que es una variable
     * @author Yeumen Silva
     * @author Lucas Moyano
     * */

    private void listaDeclaracionVariables(String type, boolean isAttribute){

        // Analisis semantico ----------------------------------
        if (isAttribute){
            this.symbolTable.addAttrToStruct(this.actualToken, type);
        } else {
            //this.symbolTable.addVarToMethod(this.actualToken);
        }
        // -----------------------------------------------------
        match("ObjID");
        listaDeclaracionVariablesF(type, isAttribute);
    }

    /**
     * Regla Lista-Declaracion-Variables-F
     * @param type este es el tipo de variable/atributo
     * @param isAttribute indica si es un atributo, en caso contrario se asume que es una variable
     * @author Yeumen Silva
     * */

    private void listaDeclaracionVariablesF(String type, boolean isAttribute){
        //Primeros ,
        if(verifyEquals(",")){
            match(",");
            listaDeclaracionVariables(type, isAttribute);
        }
        else {
            //Siguientes Lista-Declaracion-Variables-F
            if(verifyEquals(";","$EOF$")){
                //Lambda
            }
            else {
                throw createException(this.actualToken, List.of(",",";"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Argumentos-Formales
     * @author Yeumen Silva
     * */

    private void argumentosFormales(){
        match("(");
        argumentosFormalesF();
    }

    /**
     * Regla Argumentos-Formales-F
     * @author Yeumen Silva
     * */

    private void argumentosFormalesF(){

        //Primeros Lista-Argumentos-Formales
        if (verifyEquals("Array" , "Bool" , "Char" , "Int" , "Str" ,
                "StructID")){
            listaArgumentosFormales();
            match(")");
        }else {
            //Primeros )
            if(verifyEquals(")")){
                match(")");
            }
            else {
                throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str" ,
                        "StructID",")"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Lista-Argumentos-Formales
     * @author Yeumen Silva
     * */

    private void listaArgumentosFormales(){
        argumentoFormal();
        listaArgumentosFormalesF();
    }

    /**
     * Regla Lista-Argumentos-Formales-F
     * @author Yeumen Silva
     * */

    private void listaArgumentosFormalesF(){

        //Primeros ,
        if(verifyEquals(",")){
            match(",");
            listaArgumentosFormales();
        }
        else{
            //Siguientes Lista-Argumentos-Formales-F
            if(verifyEquals(")","$EOF$")){
                //Lambda
            }
            else {
                throw createException(this.actualToken, List.of("," ,")"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Argumento-Formal
     * @author Yeumen Silva
     * */

    private void argumentoFormal(){
        tipo();
        // Analisis semantico ----------------------------------
        //this.symbolTable.addParameterToMethod(this.actualToken);
        //-----------------------------------------------------
        match("ObjID");
    }

    /**
     * Regla Tipo-Metodo
     * @author Yeumen Silva
     * */

    private void tipoMetodo(){

        //Primeros Tipo
        if (verifyEquals("Array" , "Bool" , "Char" , "Int" , "Str" ,
                "StructID")){
            // Analisis semantico ----------------------------------
            //this.symbolTable.setMethodType(this.actualToken);
            // -----------------------------------------------------
            tipo();
        }
        else {
            //Primeros void
            if (verifyEquals("void")){
                // Analisis semantico ----------------------------------
                //this.symbolTable.setMethodType(this.actualToken);
                // -----------------------------------------------------
                match("void");
            }
            else {
                throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str" ,
                        "StructID","void"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Tipo
     * @author Yeumen Silva
     * */

    private void tipo(){
        //Primeros Tipo-Primitivo
        if (verifyEquals("Bool" , "Char" , "Int" , "Str")){
            tipoPrimitivo();
        }
        else {
            //Primeros Tipo-Referencia
            if(verifyEquals("StructID")){
                tipoReferencia();
            }
            else {
                //Primeros Tipo-Arreglo
                if(verifyEquals("Array")){
                    tipoArreglo();
                }
                else {
                    throw createException(this.actualToken, List.of("Array" , "Bool" , "Char" , "Int" , "Str" ,
                            "StructID"),this.actualToken.getLexeme());
                }
            }
        }
    }

    /**
     * Regla Tipo-Primitivo
     * @author Yeumen Silva
     * */

    private void tipoPrimitivo(){

        if(moreOneMatch("Str") || moreOneMatch("Bool")
                || moreOneMatch("Int") || moreOneMatch("Char")){
            this.actualToken = this.lexicalAnalyzer.getNextToken();
        }
        else {
            throw createException(this.actualToken, List.of( "Bool" , "Char" , "Int" , "Str"),this.actualToken.getLexeme());
        }

    }

    /**
     * Regla Tipo-Referencia
     * @author Yeumen Silva
     * */

    private void tipoReferencia(){
        match("StructID");
    }


    /**
     * Regla Tipo-Arreglo
     * @author Yeumen Silva
     * */
    private void tipoArreglo(){
        match("Array");
        tipoPrimitivo();
    }

    /**
     * Regla Sentencia
     * @author Yeumen Silva
     * */

    private void sentencia(){
        //Primeros ;
        if (verifyEquals(";")){
            match(";");
        }
        else {
            //Primeros Asignacion
            if(verifyEquals("ObjID","self")){
                asignacion();
                match(";");
            }
            else {
                //Primeros Sentencia-Simple
                if(verifyEquals("(")){
                    sentenciaSimple();
                    match(";");
                }
                else {
                    //Primeros if
                    if (verifyEquals("if")){
                        match("if");
                        match("(");
                        expresion();
                        match(")");
                        sentencia();
                        sentenciaF();
                    }
                    else {
                        //Primeros while
                        if (verifyEquals("while")){
                            match("while");
                            match("(");
                            expresion();
                            match(")");
                            sentencia();
                        }
                        else {
                            //Primeros Bloque
                            if (verifyEquals("{")){
                                bloque();
                            }
                            else {
                                //Primeros ret
                                if (verifyEquals("ret")){
                                    match("ret");
                                    sentenciaF1();
                                }
                                else {
                                    throw createException(this.actualToken, List.of(";" , "ObjID" , "self" , "(" , "if" ,
                                            "while","{","ret"),this.actualToken.getLexeme());
                                }
                            }
                        }
                    }
                }

            }

        }
    }

    /**
     * Regla Sentencia-F
     * @author Yeumen Silva
     * */

    private void sentenciaF(){
        //Primeros else
        if (verifyEquals("else")){
            match("else");
            sentencia();
        }
        /*Aca deberian estar los siguientes de SentenciaF
        pero como tambien tienen "else", lo mejor es patear el error
        para daspues, ya que con los siguientes solo hacemos lambda
         */
    }

    /**
     * Regla Sentencia-F1
     * @author Yeumen Silva
     * */

    private void sentenciaF1(){
        //Primeros ;
        if (verifyEquals(";")){
            match(";");
        }
        else {
            //Primeros Expresion
            if (verifyEquals("!" , "(" , "+" , "++" , "-" , "--"
                    , "StrLiteral", "CharLiteral" , "false" , "ObjID"
                    , "StructID" , "IntLiteral" , "new" , "nil" , "self" , "true")){
                expresion();
                match(";");
            }
            else {
                throw createException(this.actualToken, List.of(";" , "!" , "(" , "+" , "++" , "-" , "--"
                        , "StrLiteral", "CharLiteral" , "false" , "ObjID"
                        , "StructID" , "IntLiteral" , "new" , "nil" , "self" , "true"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Bloque
     * @author Yeumen Silva
     * */

    private void bloque(){
        match("{");
        bloqueF();

    }

    /**
     * Regla Bloque-F
     * @author Yeumen Silva
     * */

    private void bloqueF(){
        //Primeros }
        if(verifyEquals("}")){
            match("}");
        }
        else {
            //Primeros Setntencia-Estrella
            if(verifyEquals("(" , ";" , "ObjID" , "if" , "ret" ,
                    "self" , "while" , "{")){
                sentenciaEstrella();
                match("}");
            }
            else {
                throw createException(this.actualToken, List.of("}" ,"(" , ";" , "ObjID" , "if" , "ret" ,
                        "self" , "while" , "{"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla Asignación
     * @author Yeumen Silva
     * */

    private void asignacion(){
        //Primeros AccesoVar-Simple
        if (verifyEquals("ObjID")){
            accesoVarSimple();
            match("=");
            expresion();
        }
        else {
            //`Primeros AccesoSelf-Simple
            if(verifyEquals("self")){
                accesoSelfSimple();
                match("=");
                expresion();
            }
            else {
                throw createException(this.actualToken, List.of("ObjID" , "self"),this.actualToken.getLexeme());
            }
        }
    }

    /**
     * Regla AccesoVar-Simple
     * @author Yeumen Silva
     * */

    private void accesoVarSimple(){
        // Analisis semantico ----------------------------------
        // acá ya debería existir este objeto
        // -----------------------------------------------------
        match("ObjID");
        accesoVarSimpleF();
    }

    /**
     * Regla AccesoVar-Simple-F
     * @author Yeumen Silva
     * */
